# zabbix_learning

./: README.md  docker-compose.yaml
webapp/: Dockerfile  app.py  pyproject.toml  requirements.txt  view.py
webapp/templates/: index.html
