[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["John Holstine <jholstine@oreillyauto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = {extras = ["standard"], version = "^2.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
